# avochoc-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: __init__.py  env.py
alembic/versions/: 0001_init.py  0002_add_asset_owner.py  0003_add_new_fields_to_asset_and_user.py  0004_add_last_ip_to_users.py
app/: main.py
app/api/: deps.py
app/api/routes/: assets.py  auth.py  health.py
app/core/: cache.py  config.py  database.py  logging.py  redis.py  security.py
app/models/: __init__.py  asset.py  user.py
app/schemas/: asset.py  response.py  user.py
app/services/: ai_service.py  asset_service.py  auth_service.py  email_service.py
tests/: conftest.py
tests/functional/: test_asset_image_upload.py  test_assets_routes.py  test_auth_routes.py
tests/unit/: test_ai_service.py  test_asset_service.py  test_features.py
